fixed overflow, width, and header properties

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: #f6f6ef;
   color: #333;
   margin: 0;
-  padding: 10px 30px; /* 5px top and bottom, 10px left and right */
+  /*padding: 10px 30px; /* 5px top and bottom, 10px left and right */
 }
 
 body a {
@@ -62,7 +62,7 @@ nav a:hover {
   text-decoration: none;
 }
 
-.header-right a {
+/*.header-right a {
   color: black;
   text-decoration: none;
   font-size: 0.9em;
@@ -72,7 +72,7 @@ nav a:hover {
 .header-right a:hover {
   color: white;
   text-decoration: none;
-}
+}*/
 
 .post-list {
   list-style-type: decimal;
@@ -133,10 +133,67 @@ footer {
 }
 
 details {
-  padding: 0px 50px;
+  /*padding: 0px 50px;*/
   margin-bottom: 10px;
 }
 
 details ol li {
   margin-bottom: 5px;
+}
+
+/* Extra Small screens (Mobile up to 576px) */
+@media (max-width: 576px) {
+    body {
+      padding: none;
+      overflow-wrap: break-word;
+      overflow-x: hidden;
+    }
+
+    details {
+      padding: none;
+    }
+
+    .header-right {
+      display: none;
+    }
+}
+
+/* Small screens (Tablets 576px - 768px) */
+@media (min-width: 576px) and (max-width: 768px) {
+    body {
+      padding: none;
+      overflow-wrap: break-word;
+      overflow-x: hidden;
+    }
+
+    details {
+      padding: none;
+    }
+
+    .header-right {
+      display: none;
+    }
+}
+
+/* Extra Large screens (Wide Screens 1200px and up) */
+@media (min-width: 768px) {
+    body {
+      padding: 10px 30px;
+    }
+
+    details {
+      padding: 0px 30px;
+    }
+
+    .header-right a {
+      color: black;
+      text-decoration: none;
+      font-size: 0.9em;
+      margin: 0 5px;
+    }
+
+    .header-right a:hover {
+      color: white;
+      text-decoration: none;
+    }
 }
